# demos

./: .envrc  .gitignore  README.md  pyproject.toml
_email/: send_txt_msg.py
games/: _games.py  craps_simulator.py
hacking/: hack_reddit_acct.py
pbar/: async_ordered_progress_bar.py
