[tool.poetry]
name = "demos"
version = "0.0.1"
description = "Demonstrative scripts"
authors = ["acamso <acamso@gmail.com>"]
readme = "README.md"
repository = "https://github.com/acamso/demos"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
lxml = "^4.6.3"
user-agents = "^2.2.0"
Faker = "^7.0.1"
aiosmtplib = "^1.1.4"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
