[tool.poetry]
name = "demos"
version = "0.0.1"
description = "Demonstrative scripts"
authors = ["acamso <acamso@gmail.com>"]
readme = "README.md"
repository = "https://github.com/acamso/demos"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
lxml = "^4.6.3"
user-agents = "^2.2.0"
Faker = "^7.0.1"
aiosmtplib = "^1.1.4"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = {version = "^19.10b0", allow-prereleases = true}
docformatter = "^1.3.1"
flake8 = "^3.8.4"
guppy3 = "^3.1.0"
ipython = "^7.19.0"
jedi = "^0.17.2"
line-profiler = "^3.1.0"
memory-profiler = "^0.58.0"
msgpack = "^1.0.0"
mypy = "^0.790"
pydocstyle = "^5.1.1"
pylint = "^2.6.0"
pynvim = "^0.4.2"
pytest-check = "^0.3.9"
pytest-dependency = "^0.5.1"
pytest-repeat = "^0.9.1"
radon = "^4.3.2"
wrapt = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
